chore: refactored code depending on SonarQube report